[gd_scene load_steps=25 format=3 uid="uid://bw7rrlh787rod"]

[ext_resource type="PackedScene" uid="uid://cqrbqisqsq1mv" path="res://src/Buildings/Abstracts/Building.tscn" id="1_kfka2"]
[ext_resource type="Script" path="res://src/Buildings/Furnace/Furnace.gd" id="2_yac1p"]
[ext_resource type="Texture2D" uid="uid://d4h17xuvephks" path="res://art/buildings/Furnace.png" id="3_si5lf"]
[ext_resource type="Texture2D" uid="uid://m83tt11orllm" path="res://art/buildings/Furnace/FurnaceBurning1.png" id="4_uwu1l"]
[ext_resource type="Texture2D" uid="uid://2oo08gonwqi8" path="res://art/buildings/Furnace/FurnaceBurning2.png" id="5_xwkbf"]
[ext_resource type="Texture2D" uid="uid://dyjb7htw1opyo" path="res://art/buildings/Furnace/FurnaceBurning3.png" id="6_hxd3c"]
[ext_resource type="Texture2D" uid="uid://drvq3yndyip8m" path="res://art/buildings/Furnace/FurnaceBurning4.png" id="7_dydmk"]
[ext_resource type="Texture2D" uid="uid://6tmqoyjkm0uv" path="res://art/buildings/Furnace/FurnaceBurning5.png" id="8_huf5g"]
[ext_resource type="Texture2D" uid="uid://iqjvy302gkn3" path="res://art/buildings/Furnace/FurnaceBurning6.png" id="9_y6xyq"]
[ext_resource type="Texture2D" uid="uid://dp58yhtm34svd" path="res://art/buildings/Furnace/FurnaceBurning7.png" id="10_ssdet"]
[ext_resource type="Texture2D" uid="uid://cyv7h7yn4sdri" path="res://art/buildings/Furnace/Furnace.png" id="11_ija6c"]
[ext_resource type="PackedScene" uid="uid://c8mirukmbig14" path="res://src/UI/BuildingBuildPopup/BuildingPopup.tscn" id="12_wwqmm"]
[ext_resource type="PackedScene" uid="uid://cc42ijfofhger" path="res://src/UI/CraftingProgressPopup/CraftingPopup.tscn" id="13_3aips"]
[ext_resource type="PackedScene" uid="uid://bjhn58vw5m0yv" path="res://src/UI/CraftingRssSelection/RssSelection.tscn" id="14_h6cyt"]
[ext_resource type="PackedScene" uid="uid://c2o122ycvymoc" path="res://src/UI/CraftingRssSelection/CraftingRssSelection.tscn" id="15_26in4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7kybo"]
radius = 12.0

[sub_resource type="Animation" id="Animation_lc3bd"]
resource_name = "Active"
length = 2.1
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_uwu1l"), ExtResource("5_xwkbf"), ExtResource("6_hxd3c"), ExtResource("7_dydmk"), ExtResource("8_huf5g"), ExtResource("9_y6xyq"), ExtResource("10_ssdet")]
}

[sub_resource type="Animation" id="Animation_42uya"]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_ija6c")]
}

[sub_resource type="Animation" id="Animation_g33qx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_si5lf")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_461u3"]
_data = {
"Active": SubResource("Animation_lc3bd"),
"Idle": SubResource("Animation_42uya"),
"RESET": SubResource("Animation_g33qx")
}

[sub_resource type="Animation" id="Animation_1w0an"]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kdx1y"]
resource_name = "Pulsing"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.12549, 0.541176, 0, 0.858824), Color(0.12549, 0.541176, 0, 0.858824)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1), Vector2(0.95, 0.95), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wex3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.341176, 0.65098, 0.160784, 0.505882)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ngw51"]
_data = {
"Idle": SubResource("Animation_1w0an"),
"Pulsing": SubResource("Animation_kdx1y"),
"RESET": SubResource("Animation_wex3q")
}

[node name="Furnace" instance=ExtResource("1_kfka2")]
script = ExtResource("2_yac1p")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_7kybo")

[node name="Sprite2D" parent="." index="1"]
texture = ExtResource("3_si5lf")

[node name="Polygon2D" type="Polygon2D" parent="." index="2"]
position = Vector2(0.0131836, 0)
color = Color(0.341176, 0.65098, 0.160784, 0.505882)
polygon = PackedVector2Array(-4, -16, -12, -8, -12, 16, 12, 16, 12, -8, 4, -16)

[node name="FurnaceAnimation" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_461u3")
}

[node name="AvailabilityAnimaion" type="AnimationPlayer" parent="." index="4"]
root_node = NodePath("../Polygon2D")
libraries = {
"": SubResource("AnimationLibrary_ngw51")
}

[node name="BuildingPopup" parent="." index="5" instance=ExtResource("12_wwqmm")]
offset_top = -52.0
offset_bottom = -52.0

[node name="CraftingPopup" parent="." index="6" instance=ExtResource("13_3aips")]
offset_top = -36.0
offset_bottom = -36.0

[node name="FurnaceRssSelection" parent="." index="7" instance=ExtResource("14_h6cyt")]
offset_top = -40.5
offset_bottom = -40.5

[node name="CraftingRssSelection" parent="." index="8" instance=ExtResource("15_26in4")]
offset_top = 24.5
offset_bottom = 24.5

[node name="SmeltingTimer" type="Timer" parent="." index="9"]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="popup_pressed" from="BuildingPopup" to="." method="_on_building_popup_popup_pressed"]
[connection signal="closed" from="FurnaceRssSelection" to="." method="_on_furnace_rss_selection_closed"]
[connection signal="enter_burnable_selection" from="FurnaceRssSelection" to="." method="_on_furnace_rss_selection_enter_burnable_selection"]
[connection signal="enter_fuel_selection" from="FurnaceRssSelection" to="." method="_on_furnace_rss_selection_enter_fuel_selection"]
[connection signal="closed" from="CraftingRssSelection" to="." method="_on_crafting_rss_selection_closed"]
[connection signal="item_activated" from="CraftingRssSelection" to="." method="_on_crafting_rss_selection_item_activated"]
[connection signal="timeout" from="SmeltingTimer" to="." method="_on_smelting_timer_timeout"]
